--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
   },
   "homepage": "https://github.com/tiagodlb/shortly-api#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "chalk": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "nanoid": "^4.0.0",
     "nodemon": "^2.0.19",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "string-strip-html": "^11.1.0",
+    "uuid": "^8.3.2"
   }
 }
